# CINST-Artifact

./: README.md  env.sh
benchmarks/: download.sh  process.sh  run.sh
benchmarks/dacapo/: test.py
benchmarks/renaissance/: tasks.txt  test.py
benchmarks/spec/: container_methods.txt  tasks.txt  test.py
cinst/: CMakeLists.txt  build.sh  build_clean.sh  env.sh  kill_server.sh  run_server.sh
cinst/agent/: CMakeLists.txt
cinst/agent/include/: agent.h  client.h  utils.h
cinst/agent/src/: agent.cpp  client.cpp
cinst/cmake/: Findspdlog.cmake
cinst/native/: CMakeLists.txt  logger_Record.h  native.cpp  recorder.hpp
cinst/preload/: CMakeLists.txt  preload.cpp
cinst/scripts/: CMakeLists.txt  NGC_query.py  RT_query.py  build_container.sh  build_container_db.py  build_spdlog.sh  csv2db.py  index_query.py  misuse2_query.py  misuse_query.py  null_query.py  pre_waste_query.py
cinst/scripts/include/: fs_util.h  record_reader.hpp
cinst/scripts/sqlite/: CMakeLists.txt
cinst/scripts/src/: addr2id.cpp  csv2db.cpp  fs_utils.cpp
scripts/: dacapo.txt  get_single_time.sh  get_time.sh  local_report.py  log2mem.py  log2time.sh  overhead.py  process_log.sh  renaissance.txt  time2real.py
